--- a/css/styles.css
+++ b/css/styles.css
@@ -35,32 +35,28 @@ h1 {
 
 nav {
   font-size: 0.9rem;
-  width: 50%;
   padding-top: 20px;
   text-align: center;
-  line-height: 3rem;
   font-size: 25px;
-}
-
-section nav {
   margin: 0 auto;
 }
 
+nav ul {
+  display: inline-block;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center; */
+}
+
 nav li {
+  flex: 0 1 auto;
   list-style-type: none;
   border: 1px solid lightgray;
   border-radius: 20px;
   background-color: #333;
   color: whitesmoke;
   margin-bottom: 20px;
-}
-
-nav a,
-nav a:visited {
-  display: block;
-  text-decoration: none;
-  color: inherit;
-  padding: 10px 0;
+  padding: 5px 20px;
 }
 
 nav li:hover {
@@ -69,6 +65,14 @@ nav li:hover {
   font-size: 1.6rem;
   box-shadow: 0 8px 10px rgba(0, 0, 0, 0.4);
   cursor: pointer;
+}
+
+nav a,
+nav a:visited {
+  display: block;
+  text-decoration: none;
+  color: inherit;
+  padding: 10px 0;
 }
 
 header img {
@@ -81,14 +85,26 @@ header img {
 
 section {
   line-height: 25px;
-  width: 33%;
+  max-width: 800px;
   padding: 20px;
   margin: 0 auto;
 }
 
+.ingredients,
+.steps {
+  text-align: center;
+}
+
+.ingredients ul,
+.steps ol {
+  display: inline-block;
+  text-align: left;
+  padding: 30px;
+}
+
 h2,
 h3 {
-  margin: 20px 0;
+  margin: 30px 0;
 }
 
 footer {
